--- a/GradesManagement/content/css/default.css
+++ b/GradesManagement/content/css/default.css
@@ -12,3 +12,46 @@
     display:none;
     
 }
+
+#editContainer {
+    position: relative;
+    background-color: #FFFFFF;
+    padding: 2em;
+    border-radius: 10px;
+    width: 350px;
+    height: 250px;
+    margin: 100px auto;
+    overflow-y: auto;   
+}
+
+#modalDialog {
+    display: none;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 101;
+}
+
+#cover {
+    display: none;
+    position: absolute;
+    background-color: black;
+    z-index: 100;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+}
+
+#closeModal {
+    font-family: fantasy;
+    cursor: pointer;
+    float: right;
+
+}
+
+#closeModal:hover{
+    color: lightblue;
+}
