--- a/GradesManagement/content/css/default.css
+++ b/GradesManagement/content/css/default.css
@@ -12,7 +12,7 @@ body {
     display: none;
 }
 
-#editContainer {
+#editContainer, #addContainer {
     position: relative;
     background-color: #FFFFFF;
     padding: 2em;
@@ -24,7 +24,7 @@ body {
     box-shadow: rgba(0,0,0,.5) 4px 5px 10px;
 }
 
-#modalDialog {
+#modalDialog, #modalDialog2  {
     display: none;
     position: absolute;
     top: 0px;
@@ -34,7 +34,7 @@ body {
     z-index: 101;
 }
 
-#cover {
+#cover,  #cover2 {
     display: none;
     position: absolute;
     background-color: black;
@@ -45,7 +45,7 @@ body {
     height: 100%;
 }
 
-#closeModal {
+#closeModal, #closeModal2 {
     font-family: fantasy;
     cursor: pointer;
     float: right;
@@ -55,15 +55,19 @@ body {
         color: lightblue;
     }
 
-#editContainer > header > h3 {
+     #closeModal2:hover {
+        color: lightblue;
+    }
+
+#editContainer > header > h3,  #addContainer > header > h3 {
     display: inline-block;
 }
 
-#editForm > section > div {
+#editForm > section > div, #addForm > section > div {
     margin: 5px auto;
 }
 
-    #editForm > section > div > label, #editForm > section > div > input {
+    #editForm > section > div > label, #editForm > section > div > input,    #addForm > section > div > label, #addForm > section > div > input {
         width: 100%;
         margin: 5px auto;
         -moz-box-sizing: border-box;
@@ -71,15 +75,15 @@ body {
         box-sizing: border-box;
     }
 
-#editForm input {
+#editForm input, #addForm input {
     padding: 5px;
 }
 
-#editButtons {
+#editButtons, #addButtons {
     margin: 5px auto;
 }
 
-    #editButtons button {
+    #editButtons button, #addButtons button {
         padding: 5px;
         width: 50px;
     }
