--- a/GradesManagement/content/css/default.css
+++ b/GradesManagement/content/css/default.css
@@ -12,7 +12,7 @@ body {
     display: none;
 }
 
-#editContainer, #addContainer {
+#editContainer, #addContainer, #addEditContainer {
     position: relative;
     background-color: #FFFFFF;
     padding: 2em;
@@ -24,7 +24,7 @@ body {
     box-shadow: rgba(0,0,0,.5) 4px 5px 10px;
 }
 
-#modalDialog, #modalDialog2  {
+#modalDialog, #modalDialog2, #modalDialog3  {
     display: none;
     position: absolute;
     top: 0px;
@@ -34,7 +34,7 @@ body {
     z-index: 101;
 }
 
-#cover,  #cover2 {
+#cover,  #cover2, #cover3 {
     display: none;
     position: absolute;
     background-color: black;
@@ -45,7 +45,7 @@ body {
     height: 100%;
 }
 
-#closeModal, #closeModal2 {
+#closeModal, #closeModal2, #closeModal3 {
     font-family: fantasy;
     cursor: pointer;
     float: right;
@@ -59,15 +59,19 @@ body {
         color: lightblue;
     }
 
-#editContainer > header > h3,  #addContainer > header > h3 {
+      #closeModal3:hover {
+        color: lightblue;
+    }
+
+#editContainer > header > h3,  #addContainer > header > h3,  #addEditContainer > header > h3 {
     display: inline-block;
 }
 
-#editForm > section > div, #addForm > section > div {
+#editForm > section > div, #addForm > section > div, #addEditForm > section > div, #addEditForm > section > select {
     margin: 5px auto;
 }
 
-    #editForm > section > div > label, #editForm > section > div > input,    #addForm > section > div > label, #addForm > section > div > input {
+    #editForm > section > div > label, #editForm > section > div > input,    #addForm > section > div > label, #addForm > section > div > input,    #addEditForm > section > div > label, #addEditForm > section > div > input  {
         width: 100%;
         margin: 5px auto;
         -moz-box-sizing: border-box;
@@ -75,17 +79,23 @@ body {
         box-sizing: border-box;
     }
 
-#editForm input, #addForm input {
+#editForm input, #addForm input, #addEditForm input {
     padding: 5px;
 }
 
-#editButtons, #addButtons {
+
+#editButtons, #addButtons, #addEditButtons {
     margin: 5px auto;
 }
 
     #editButtons button, #addButtons button {
         padding: 5px;
         width: 50px;
+    }
+
+     #addEditButtons button {
+        padding: 5px;
+        width: 100px;
     }
 
 th {
@@ -96,7 +106,8 @@ th {
 }
 
 table, tbody, thead, th, tr, td{
-    border border-color: aqua;
+    /*border border-color: aqua;*/
+    border-color: aqua;
     
 }
 
