--- a/GradesManagement/content/css/default.css
+++ b/GradesManagement/content/css/default.css
@@ -12,7 +12,7 @@ body {
     display: none;
 }
 
-#editContainer, #addContainer, #addEditContainer {
+#editContainer, #addContainer, #assignTutorContainer {
     position: relative;
     background-color: #FFFFFF;
     padding: 2em;
@@ -63,15 +63,15 @@ body {
         color: lightblue;
     }
 
-#editContainer > header > h3,  #addContainer > header > h3,  #addEditContainer > header > h3 {
+#editContainer > header > h3,  #addContainer > header > h3,  #assignTutorContainer > header > h3 {
     display: inline-block;
 }
 
-#editForm > section > div, #addForm > section > div, #addEditForm > section > div, #addEditForm > section > select {
+#editForm > section > div, #addForm > section > div, #addEditForm > section > div, #assignTutorForm > section > select {
     margin: 5px auto;
 }
 
-    #editForm > section > div > label, #editForm > section > div > input,    #addForm > section > div > label, #addForm > section > div > input,    #addEditForm > section > div > label, #addEditForm > section > div > input  {
+    #editForm > section > div > label, #editForm > section > div > input,    #addForm > section > div > label, #addForm > section > div > input,    #assignTutorForm > section > div > label, #assignTutorForm > section > div > input  {
         width: 100%;
         margin: 5px auto;
         -moz-box-sizing: border-box;
@@ -79,12 +79,12 @@ body {
         box-sizing: border-box;
     }
 
-#editForm input, #addForm input, #addEditForm input {
+#editForm input, #addForm input, #assignTutorForm input {
     padding: 5px;
 }
 
 
-#editButtons, #addButtons, #addEditButtons {
+#editButtons, #addButtons, #assignTutorButtons {
     margin: 5px auto;
 }
 
@@ -93,7 +93,7 @@ body {
         width: 50px;
     }
 
-     #addEditButtons button {
+     #assignTutorButtons button {
         padding: 5px;
         width: 100px;
     }
