--- a/GradesManagement/content/css/default.css
+++ b/GradesManagement/content/css/default.css
@@ -12,7 +12,7 @@ body {
     display: none;
 }
 
-#editContainer, #addContainer, #addEditContainer {
+#editContainer, #addContainer, #addEditContainer, #editContainerTu {
     position: relative;
     background-color: #FFFFFF;
     padding: 2em;
@@ -24,7 +24,7 @@ body {
     box-shadow: rgba(0,0,0,.5) 4px 5px 10px;
 }
 
-#modalDialog, #modalDialog2, #modalDialog3  {
+#modalDialog, #modalDialog2, #modalDialog3, #modalDialog4  {
     display: none;
     position: absolute;
     top: 0px;
@@ -34,7 +34,7 @@ body {
     z-index: 101;
 }
 
-#cover,  #cover2, #cover3 {
+#cover,  #cover2, #cover3, #cover4 {
     display: none;
     position: absolute;
     background-color: black;
@@ -45,7 +45,7 @@ body {
     height: 100%;
 }
 
-#closeModal, #closeModal2, #closeModal3 {
+#closeModal, #closeModal2, #closeModal3, #closeModal4 {
     font-family: fantasy;
     cursor: pointer;
     float: right;
@@ -63,15 +63,19 @@ body {
         color: lightblue;
     }
 
-#editContainer > header > h3,  #addContainer > header > h3,  #addEditContainer > header > h3 {
+      #closeModal4:hover {
+        color: lightblue;
+    }
+
+#editContainer > header > h3,  #addContainer > header > h3,  #addEditContainer > header > h3,#editContainerTu >header >h3 {
     display: inline-block;
 }
 
-#editForm > section > div, #addForm > section > div, #addEditForm > section > div, #addEditForm > section > select {
+#editForm > section > div, #addForm > section > div, #addEditForm > section > div, #addEditForm > section > select,#editFormTu >section >div {
     margin: 5px auto;
 }
 
-    #editForm > section > div > label, #editForm > section > div > input,    #addForm > section > div > label, #addForm > section > div > input,    #addEditForm > section > div > label, #addEditForm > section > div > input  {
+    #editForm > section > div > label, #editForm > section > div > input,    #addForm > section > div > label, #addForm > section > div > input,    #addEditForm > section > div > label, #addEditForm > section > div > input, #editFormTu > section > div > label, #editFormTu > section > div > input  {
         width: 100%;
         margin: 5px auto;
         -moz-box-sizing: border-box;
@@ -79,7 +83,7 @@ body {
         box-sizing: border-box;
     }
 
-#editForm input, #addForm input, #addEditForm input {
+#editForm input, #addForm input, #addEditForm input, #editFormTu input {
     padding: 5px;
 }
 
